Mise en place des mécanismes sur gestion_affectations

--- a/app/views/entities/creer_propositions.html.haml
+++ b/app/views/entities/creer_propositions.html.haml
@@ -31,7 +31,7 @@
           %td= f.association :consultant, as: :hidden,  input_html: {value: consultant.id}
           %td= f.input       :etat,       as: :hidden,  input_html: {value: "créée"}
           %td= f.input       :date,       label: false, input_html: {class: 'datepicker', value: Time.now.to_date.next_week}, placeholder: "Date d'arrivée", as: :string
-          %td= f.input       :nbre_jour,  label: false, placeholder: "Nombre de jours"
+          %td= f.input       :nbre_jour,  label: false, placeholder: "Nb jours"
           %td= f.submit "Proposer", class: 'btn'
 
 = link_to "Créer un Collaborateur", "#collaborateur", class: 'btn btn-info', "data-toggle" => "modal"
