--- a/app/views/collaborators/show.html.haml
+++ b/app/views/collaborators/show.html.haml
@@ -39,6 +39,9 @@
   %strong Entité :
   = @collaborator.entity.name
 %p
+  %strong Entité Aramis :
+  = @collaborator.aramis_entity.name
+%p
   %strong Manager :
   = @collaborator.manager.try(:name)
 %p
