--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,6 +42,7 @@
               %li.nav-header Les actions
               %li= link_to "Gérer les propositions", proposals_path
               %li= link_to "Gérer les entités", entities_path
+              %li= link_to "Gérer les entités aramis", aramis_entities_path
               %li= link_to "Gérer les domaines", domains_path
               %li= link_to "Gérer les collaborateurs", collaborators_path
               %li= link_to "Gérer les projets", projects_path
@@ -52,4 +53,4 @@
           = yield
     
       %footer
-        %p &copy; Devoteam 2013
+        %p &copy; Devoteam 2014
