--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,3 +63,24 @@ p {
   color: #fff;
   text-decoration: none;
 }
+.minimiser td {
+  /*line-height: 10px;*/
+  padding: 2px;
+}
+.minimiser .control-group {
+  margin: 0px;
+}
+.minimiser input[type="text"]{
+  margin: 0px;
+  width: 66px;
+  height: 12px;
+  padding: 1px;
+  font-size: 13px;
+}
+.minimiser input[type="number"]{
+  height: 12px;
+  padding: 1px;
+  margin-bottom: 0px;
+  width: 50px;
+  font-size: 13px;
+}
