--- a/app/views/entities/creer_propositions.html.haml
+++ b/app/views/entities/creer_propositions.html.haml
@@ -11,7 +11,7 @@
     %tr
       %th Consultant
       %th Date
-      %th Nombre de jours
+      %th Nb jours
   %tbody
     - @propositions.each do |proposal|
       %tr
@@ -19,7 +19,7 @@
         %td= proposal.date
         %td= proposal.nbre_jour
 
-%table.table.table-striped
+%table.table.table-striped.table-condensed.minimiser
   %caption
     %h4 Les consultants à proposer
   %tbody
@@ -32,9 +32,9 @@
           %td= f.input       :etat,       as: :hidden,  input_html: {value: "créée"}
           %td= f.input       :date,       label: false, input_html: {class: 'datepicker', value: Time.now.to_date.next_week}, placeholder: "Date d'arrivée", as: :string
           %td= f.input       :nbre_jour,  label: false, placeholder: "Nb jours"
-          %td= f.submit "Proposer", class: 'btn'
+          %td= f.submit "Proposer", class: 'btn btn-mini'
 
-= link_to "Créer un Collaborateur", "#collaborateur", class: 'btn btn-info', "data-toggle" => "modal"
+= link_to "Créer un Collaborateur", "#collaborateur", class: 'btn btn-info btn-mini', "data-toggle" => "modal"
 
 - dialog_body = capture do
   = simple_form_for @entity.collaborators.new, :html => { class: 'form-horizontal' } do |f|
@@ -50,6 +50,7 @@
     = f.input :niv_diplome, collection: [">= Bac + 3", "Bac + 2", "Autres"]
     = f.input :nat_diplome, collection: ["Autre", "Scientifique"]
     = f.association :entity, as: :hidden
+    = f.association :aramis_entity, label: "Entité Aramis"
     = f.association :manager, collection: @entity.collaborators.managers, prompt: "Sélectionner le manager du consultant"
     = f.input :commentaire
     .form-actions
@@ -61,7 +62,7 @@ footer: content_tag(:button, 'Annuler', class: 'btn', "data-dismiss" => "modal")
 
 :javascript
   $(".datepicker").datepicker({
-    dateFormat: "dd-mm-yy",
+    dateFormat: "yy-mm-dd",
     showWeek: true,
     firstDay: 1,
     showAnim: "slideDown"
