--- a/app/views/entities/creer_propositions.html.haml
+++ b/app/views/entities/creer_propositions.html.haml
@@ -4,7 +4,7 @@
     = @entity.name
     = Time.now.next_week.strftime("S%W %Y")
 
-%table.table.table-striped
+%table.table.table-striped.table-condensed
   %caption
     %h4 Les consultants proposés
   %thead
