--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,24 +63,55 @@ p {
   color: #fff;
   text-decoration: none;
 }
-.minimiser td {
-  /*line-height: 10px;*/
-  padding: 2px;
+.minimiser {
+  td {
+    font-size: 10px;
+    /*line-height: 10px;*/
+    padding: 1px;
+  }
+  .control-group {
+    margin: 0px;
+  }
+  input[type="text"]{
+    margin: 0px;
+    width: 66px;
+    height: 15px;
+    padding: 1px;
+    font-size: 10px;
+  }
+  input[type="number"]{
+    height: 15px;
+    padding: 1px;
+    margin-bottom: 0px;
+    width: 66px;
+    font-size: 10px;
+  }
+  h4 {
+    font-size: 12px;
+    margin-bottom: 2px;
+    margin-top: 2px;
+  }
+  th {
+    font-size: 11px;
+    padding-top: 1px;
+    padding-bottom: 1px;
+    line-height: 13px;
+  }
+  td {
+    line-height: 12px;
+  }
+  .fonction {
+    font-size: 10px;
+    padding-bottom: 1px;
+    padding-top: 1px;
+    line-height: 12px;
+  }
 }
-.minimiser .control-group {
-  margin: 0px;
-}
-.minimiser input[type="text"]{
-  margin: 0px;
-  width: 66px;
-  height: 12px;
-  padding: 1px;
-  font-size: 13px;
-}
-.minimiser input[type="number"]{
-  height: 12px;
-  padding: 1px;
-  margin-bottom: 0px;
-  width: 50px;
-  font-size: 13px;
+.tete {
+  margin-bottom: 5px;
+  margin-top: 2px;
+  padding-bottom: 2px;
+  h1 {
+    margin-top: 1px;
+  }
 }
