--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -86,6 +86,13 @@ p {
     width: 66px;
     font-size: 10px;
   }
+  select {
+    margin-bottom: 0px;
+    font-size: 10px;
+    height: 16px;
+    padding: 1px;
+    width: 120px;
+  }
   h4 {
     font-size: 12px;
     margin-bottom: 2px;
@@ -104,6 +111,10 @@ p {
     font-size: 10px;
     padding-bottom: 1px;
     padding-top: 1px;
+    line-height: 12px;
+  }
+  .action_form {
+    font-size: 10px;
     line-height: 12px;
   }
 }
