--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -46,8 +46,9 @@
               %li= link_to "Gérer les domaines", domains_path
               %li= link_to "Gérer les collaborateurs", collaborators_path
               %li= link_to "Gérer les projets", projects_path
-              %li= link_to "Gérer les affectations", affectations_path 
+              %li= link_to "Gérer les affectations", affectations_path
               %li= link_to "Confirmer les arrivées", confirmations_path
+              %li= link_to "Publipostage", envoyer_codes_proposals_path
         .span9
           = bootstrap_flash
           = yield
