--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -7,4 +7,4 @@
   = f.input       :description
   .form-actions
     = f.button :submit, :class => 'btn-primary'
-    = link_to "Annuler", projects_path, :class => 'btn'
+    = link_to "Annuler", @project.domain, :class => 'btn'
