--- a/app/views/aramis_entities/_form.html.haml
+++ b/app/views/aramis_entities/_form.html.haml
@@ -1,7 +1,7 @@
-= simple_form_for @aramis_entity, :html => { :class => 'form-horizontal' } do |f|
+= simple_form_for @aramis_entity, html: { class: 'form-horizontal' } do |f|
   = f.input :name
   = f.association :project_code, label: "Code Projet"
   = f.input :description
   .form-actions
-    = f.button :submit, :class => 'btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), aramis_entities_path, :class => 'btn'
+    = f.submit "Mettre à jour", class: 'btn btn-primary'
+    = link_to "Annuler", @aramis_entity, class: 'btn'
