--- a/app/views/collaborators/show.html.haml
+++ b/app/views/collaborators/show.html.haml
@@ -43,12 +43,36 @@
   = @collaborator.aramis_entity.name
 %p
   %strong Manager :
-  = @collaborator.manager.try(:name)
+  = @collaborator.entity.manager.try(:name)
 %p
   %strong Commentaire :
   = @collaborator.commentaire
 
 .form-actions
-  = link_to "Retour aux Collaborateurs", collaborators_path, :class => 'btn'
-  = link_to "Modifier", edit_collaborator_path(@collaborator), :class => 'btn'
-  = link_to "Supprimer", collaborator_path(@collaborator), :method => "delete", :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-danger'
+  = link_to "Retour", @collaborator.entity, class: 'btn'
+  = link_to "Modifier", "#collaborateur", class: 'btn', data: {toggle: "modal"}
+  =# link_to "Supprimer", collaborator_path(@collaborator), :method => "delete", :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-danger'
+
+- dialog_body = capture do
+  = simple_form_for @collaborator, :html => { class: 'form-horizontal' } do |f|
+    = f.input :nom
+    = f.input :prenom, label: "Prénom"
+    = f.input :id_karma
+    = f.input :profil
+    = f.input :role, label: "Rôle", collection: ["consultant", "manager", "resp_domaine"], prompt: "Sélectionner le rôle du collaborateur"
+    = f.input :email, placeholder: "prénom.nom@devoteam.com"
+    = f.input :eligibilite, collection: ["éligible", "éligible-conditionnelle", "non-éligible"]
+    =# f.input :etat, collection: ["non-validé", "validé"], prompt: "Sélectionner la validité du collaborateur"
+    =# f.input :statut
+    = f.input :niv_diplome, collection: [">= Bac + 3", "Bac + 2", "Autres"]
+    = f.input :nat_diplome, collection: ["Autre", "Scientifique"]
+    = f.association :entity, label: "Entité"
+    = f.association :aramis_entity, label: "Entité Aramis"
+    =# f.association :manager, collection: proposal.consultant.entity.collaborators.managers, prompt: "Sélectionner le manager du consultant"
+    = f.input :commentaire
+    .form-actions
+      = f.submit "Mettre à jour Collaborateur", class: 'btn btn-primary'
+= modal_dialog id: "collaborateur",
+header: { show_close: true, dismiss: 'modal', title: "Modification de "+@collaborator.name },
+body: dialog_body,
+footer: content_tag(:button, 'Annuler', class: 'btn', "data-dismiss" => "modal")
