--- a/app/views/domains/edit.html.haml
+++ b/app/views/domains/edit.html.haml
@@ -1,4 +1,9 @@
-- model_class = Domain
 .page-header
   %h1 Modifier Domaine
-= render :partial => "form"
+= simple_form_for @domain, html: { class: 'form-horizontal' } do |f|
+  = f.input :name, label: "Nom"
+  = f.association :responsable, collection: Collaborator.responsables, prompt: "Sélectionner le responsable"
+  = f.input :description
+  .form-actions
+    = f.submit "Mettre à jour", class: 'btn btn-primary'
+    = link_to "Annuler", @domain, class: 'btn'
