--- a/app/views/entities/creer_propositions.html.haml
+++ b/app/views/entities/creer_propositions.html.haml
@@ -4,7 +4,7 @@
     = @entity.name
     = Time.now.next_week.strftime("S%W %Y")
 
-%table.table.table-striped.table-condensed
+%table.table.table-striped.table-condensed.minimiser.well
   %caption
     %h4 Les consultants proposés
   %thead
@@ -12,12 +12,15 @@
       %th Consultant
       %th Date
       %th Nb jours
+      %th Actions
   %tbody
     - @propositions.each do |proposal|
       %tr
         %td= proposal.consultant.name
         %td= proposal.date
         %td= proposal.nbre_jour
+        %td
+          = link_to "Annuler", proposal_path(proposal), :method => :delete, :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-mini btn-danger fonction'
 
 %table.table.table-striped.table-condensed.minimiser
   %caption
@@ -30,7 +33,7 @@
           %td= f.association :entity,     as: :hidden,  input_html: {value: consultant.entity_id}
           %td= f.association :consultant, as: :hidden,  input_html: {value: consultant.id}
           %td= f.input       :etat,       as: :hidden,  input_html: {value: "créée"}
-          %td= f.input       :date,       label: false, input_html: {class: 'datepicker', value: Time.now.to_date.next_week}, placeholder: "Date d'arrivée", as: :string
+          %td= f.input       :date,       label: false, input_html: { value: Time.now.to_date.next_week}, placeholder: "Date d'arrivée", as: :string
           %td= f.input       :nbre_jour,  label: false, placeholder: "Nb jours"
           %td= f.submit "Proposer", class: 'btn btn-mini'
 
@@ -44,19 +47,19 @@
     = f.input :profil
     = f.input :role, label: "Rôle", collection: ["consultant", "manager", "resp_domaine"], prompt: "Sélectionner le rôle du collaborateur"
     = f.input :email, placeholder: "prénom.nom@devoteam.com"
-    = f.input :eligibilite, collection: ["éligible", "non-éligible"]
-    = f.input :etat, collection: ["non-validé", "validé"], prompt: "Sélectionner la validité du collaborateur"
-    = f.input :statut
+    =# f.input :eligibilite, collection: ["éligible", "non-éligible"]
+    =# f.input :etat, collection: ["non-validé", "validé"], prompt: "Sélectionner la validité du collaborateur"
+    =# f.input :statut
     = f.input :niv_diplome, collection: [">= Bac + 3", "Bac + 2", "Autres"]
     = f.input :nat_diplome, collection: ["Autre", "Scientifique"]
     = f.association :entity, as: :hidden
     = f.association :aramis_entity, label: "Entité Aramis"
-    = f.association :manager, collection: @entity.collaborators.managers, prompt: "Sélectionner le manager du consultant"
+    =# f.association :manager, collection: @entity.collaborators.managers, prompt: "Sélectionner le manager du consultant"
     = f.input :commentaire
     .form-actions
       = f.submit "Créer Collaborateur", class: 'btn btn-primary'
 = modal_dialog id: "collaborateur",
-header: { title: "Nouveau Collaborateur" },
+header: { show_close: true, dismiss: 'modal', title: "Nouveau Collaborateur pour "+@entity.name },
 body: dialog_body,
 footer: content_tag(:button, 'Annuler', class: 'btn', "data-dismiss" => "modal")
 
