--- a/app/views/entities/index.html.haml
+++ b/app/views/entities/index.html.haml
@@ -6,17 +6,14 @@
     %tr
       %th Nom
       %th Manager
-      %th Description
       %th Actions
   %tbody
     - @entities.each do |entity|
       %tr
         %td= entity.name
         %td= entity.manager.try(:name)
-        %td= entity.description
         %td
-          = link_to "Consulter", entity, :class => 'btn btn-mini'
-          = link_to "Modifier", edit_entity_path(entity), :class => 'btn btn-mini'
+          = link_to "Gérer", entity, :class => 'btn btn-mini'
           = link_to "Supprimer", entity_path(entity), :method => :delete, :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-mini btn-danger'
 
-= link_to "Nouvelle Entité", new_entity_path, :class => 'btn btn-primary'
+= link_to "Nouvelle Entité", new_entity_path, :class => 'btn btn-info'
