--- a/app/views/project_codes/_form.html.haml
+++ b/app/views/project_codes/_form.html.haml
@@ -1,5 +1,5 @@
-= simple_form_for @project_code, :html => { :class => 'form-horizontal' } do |f|
+= simple_form_for @project_code, html: { class: 'form-horizontal' } do |f|
   = f.input :name
   .form-actions
-    = f.button :submit, :class => 'btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), project_codes_path, :class => 'btn'
+    = f.submit "Créer Code Projets", class: 'btn btn-primary'
+    = link_to "Annuler", project_codes_path, class: 'btn'
