--- a/app/views/project_codes/edit.html.haml
+++ b/app/views/project_codes/edit.html.haml
@@ -1,4 +1,10 @@
 - model_class = ProjectCode
 .page-header
-  %h1=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize
-= render :partial => "form"
+  %h1 Modifier Code Projets
+=# render :partial => "form"
+= simple_form_for @project_code, html: { class: 'form-horizontal' } do |f|
+  = f.input :name
+  .form-actions
+    = f.submit "Mettre à jour", class: 'btn btn-primary'
+    = link_to "Annuler", @project_code, class: 'btn'
+
