--- a/app/views/project_codes/index.html.haml
+++ b/app/views/project_codes/index.html.haml
@@ -1,21 +1,16 @@
-- model_class = ProjectCode
 .page-header
-  %h1=t '.title', :default => model_class.model_name.human.pluralize.titleize
+  %h1 Codes Projets
 %table.table.table-striped
   %thead
     %tr
-      %th= model_class.human_attribute_name(:id)
-      %th= model_class.human_attribute_name(:name)
-      %th= model_class.human_attribute_name(:created_at)
-      %th=t '.actions', :default => t("helpers.actions")
+      %th Nom
+      %th Actions
   %tbody
     - @project_codes.each do |project_code|
       %tr
-        %td= link_to project_code.id, project_code_path(project_code)
         %td= project_code.name
-        %td=l project_code.created_at
         %td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_project_code_path(project_code), :class => 'btn btn-mini'
-          = link_to t('.destroy', :default => t("helpers.links.destroy")), project_code_path(project_code), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
+          = link_to "Gérer", project_code, class: 'btn btn-mini'
+          = link_to "Supprimer", project_code_path(project_code), method: :delete, data: { confirm: "Êtes-vous sûr ?" }, class: 'btn btn-mini btn-danger'
 
-= link_to t('.new', :default => t("helpers.links.new")), new_project_code_path, :class => 'btn btn-primary'
+= link_to "Nouveau Code Projets", new_project_code_path, class: 'btn btn-info'
