--- a/app/views/project_codes/new.html.haml
+++ b/app/views/project_codes/new.html.haml
@@ -1,4 +1,4 @@
 - model_class = ProjectCode
 .page-header
-  %h1=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize
+  %h1 Nouveau Code Projets
 = render :partial => "form"
