--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -6,5 +6,5 @@
   = f.input       :code
   = f.input       :description
   .form-actions
-    = f.button :submit, :class => 'btn-primary'
-    = link_to "Annuler", @project.domain, :class => 'btn'
+    = f.submit "Mettre à jour", class: 'btn btn-primary'
+    = link_to "Annuler", @project, class: 'btn'
