--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -18,10 +18,10 @@
   %strong Code :
   = @project.code
 %p
-  %strong Description
+  %strong Description :
   = @project.description
 
 .form-actions
-  = link_to "Retour aux Projets", projects_path, :class => 'btn'
-  = link_to "Modifier", edit_project_path(@project), :class => 'btn'
-  = link_to "Supprimer", project_path(@project), :method => "delete", :data => { :confirm => "Êtes-vous sûr ?" }, :class => 'btn btn-danger'
+  = link_to "Retour", @project.domain, class: 'btn'
+  = link_to "Modifier", edit_project_path(@project), class: 'btn'
+  =# link_to "Supprimer", project_path(@project), method: "delete", data: { confirm: "Êtes-vous sûr ?" }, class: 'btn btn-danger'
